update IEEE Computer paper on COVID-19

--- a/bibs/magazine/2023-article-ieee-computer-covid.bib
+++ b/bibs/magazine/2023-article-ieee-computer-covid.bib
@@ -6,5 +6,6 @@
   volume={56},
   number={3},
   pages={59-69},
+  url={https://ecommons.luc.edu/cs_facpubs/313/},
   doi={10.1109/MC.2022.3175751}}
 
